<resources>
    <string name="app_name">SignalPanel</string>
    <string name="nullString" translatable="false">null</string>

    <!-- Activities Name -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_config_panel">ConfigPanelActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_panel">panel</string>

    <!-- Main Activity Drawer Titles -->
    <string name="nav_header_title">Un Login</string>
    <string name="nav_header_subtitle">Basic Authorization</string>

    <string name="nav_menu_import">Import</string>
    <string name="nav_menu_export">Export</string>
    <string name="nav_menu_gallery">Gallery</string>
    <string name="nav_menu_panel">Panel</string>
    <string name="nav_menu_setings">Settings</string>
    <string name="nav_menu_communicate_title">Communicate</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_send">Send</string>
    <string name="nav_menu_Account_title">Account</string>
    <string name="nav_menu_login">Login</string>
    <string name="nav_menu_feedback_title">FeedBack</string>
    <string name="nav_menu_feedback">FeedBack</string>
    <string name="nav_menu_help_title">Help</string>
    <string name="nav_menu_help">Wiki</string>

    <!--Main Activity code-->
    <string name="main_connecting">Connecting _ _ _</string>
    <string name="main_pipe_null">Pipe is null</string>
    <string name="connect_state_success">Success</string>
    <string name="connect_message_success">Now you can open panel.</string>
    <string name="connect_state_fail">Fail</string>
    <string name="connect_message_fail">Please retry.</string>


    <!-- Seting Activity -> Preferce -->
    <!-- General Preferce -->
    <string name="pre_general_title">General</string>
    <string name="pre_language_set_message">Language</string>
    <string-array name="pre_language_set_list_titles">
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string-array name="pre_language_set_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <!-- Notification Preferce -->
    <string name="pre_notification_title">Notification</string>
    <string name="pre_notification_enable_title">Enable Notification</string>
    <string name="pre_notification_ring_enable_title">Enable Notifications by ring</string>
    <string name="pre_notification_ring_enable_summary">When some important things happened, you will receive a ring to attract you</string>
    <string name="pre_notification_ring_choose_title">Chose Ring</string>
    <string name="pre_notification_ring_null_summary">Keep Slient</string>
    <string name="pre_notification_vibrate_enable_title">Enable Notifications by Vibrate</string>
    <string name="pre_notification_vibrate_enable_summary">When some important things happened, your phone will vibrate</string>
    <!-- Data_Sync Preferce -->
    <string name="pre_data_sync_title">Data&amp;Sync</string>
    <string name="pre_data_sync_enable_title">Enable upload your panels auto</string>
    <string name="pre_data_sync_enable_summary">Your panels will automaticallly upload to github, so you can use them on other device</string>
    <string name="pre_data_sync_frequency_list_title">Sync frequency</string>
    <string-array name="pre_data_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pre_data_sync_systermsetings_title">System sync settings</string>
    <!-- Path Preferce -->
    <string name="pre_path_title">Path</string>
    <!-- Pipe preferce -->
    <string name="pre_pipe_title">Pipe</string>
    <string name="pre_pipe_bluetooth_title">Enable BlueTooth COM</string>
    <string name="pre_pipe_bluetooth_summary">Use BlueTooth to connect your lot device\'s BlueTooth model</string>
    <string name="pre_pipe_bluetooth_baudrate_title">Baud Rate</string>
    <string-array name="pre_pipe_bluetooth_baudrate_values_titles">
        <item>9600</item>
        <item>115200</item>
    </string-array>
    <string name="pre_pipe_otg_title">Enable USB-OTG COM</string>
    <string name="pre_pipe_otg_summary">Use USB-OTG to directly connect your device\'s Serial COM [USART]</string>
    <string name="pre_pipe_wifi_title">Enable WIFI TCP/IP</string>
    <string name="pre_pipe_wifi_summary">Use WIFI model to connect your device by TCP/UDP </string>
    <string name="pre_pipe_wifi_select_title">Chose your procotol</string>
    <string-array name="pre_pipe_wifi_select_values_titles">
        <item>TCP_SERVER</item>
        <item>TCP_CLIENT</item>
        <item>UDP_SERVER</item>
        <item>UDP_Client</item>
    </string-array>
    <string-array name="pre_pipe_wifi_select_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pre_pipe_wifi_address_title">Address</string>
    <string name="pre_pipe_wifi_address_summary">Input the IP address of client. If you chose server mode, this will be ignored</string>
    <string name="pre_pipe_wifi_port_title">Port</string>
    <string name="pre_pipe_wifi_port_summary">Input the port you willing to connect</string>
    <!-- Feature Preferce -->
    <string name="pre_feature_title">Feature</string>


    <!-- ParamSeting Activity -->
    <string name="paramset_mainstring_kit">Main String</string>
    <string name="paramset_sparestring_kit">Spare String</string>
    <string name="paramset_negative_enable">Negative Enable</string>
    <string name="paramset_positive_enable">Positive Enable</string>
    <string name="paramset_negative_key_kit">Negative Key</string>
    <string name="paramset_positive_key_kit">Positive Key</string>
    <string name="paramset_mode_buttunname">Mode</string>
    <string name="paramset_src_buttunname">Resources</string>
    <string name="paramset_descriptions">Params Descriptions</string>
    <string name="paramset_title_string">Set params for this plug</string>
    <string name="paramset_act_mode_dialog_title">Chose mode</string>
    <string name="paramset_act_src_dialog_title">Edit Resources</string>
    <string name="paramset_act_des_dialog_title">Description of params</string>
    <string name="paramset_act_des_buttun"> buttun description s are \r\n notods</string>



    <!-- Login Activity-->
    <string name="login_success_message">Account has get,you can back imdeitly or read the wiki.</string>
    <!-- Login Activity -> Login Dialog-->
    <string name="login">Login</string>
    <string name="login_message">Your Account will be used to upload or download files from GitHub.
    If you try to suggest or feed back to me, your account is also use to creat issuse.
    And your account will be the author of your panel.</string>

    <!-- New Panel Dialog-->
    <string name="new_panel_dialog_title">Add New Panel</string>
    <string name="new_panel_panelname">PanelName</string>
    <string name="new_panel_panelname_kit">input panel name</string>
    <string name="new_panel_author">Author</string>
    <string name="new_panel_author_kit">input your author</string>
    <string name="new_panel_description">Description</string>
    <string name="new_panel_description_kit">input your description to this panel</string>

    <!-- Panel Activity -->

    <!--Config Activity -> nav-->
    <string name="config_nav_input">Add Input Plugs</string>
    <string name="config_nav_buttun">Buttun</string>
    <string name="config_nav_switch">Switch</string>
    <string name="config_nav_seekbar">SeekBar</string>
    <string name="config_nav_joystick">Joystick</string>
    <string name="config_nav_display">Add Display Plugs</string>
    <string name="confgi_nav_lable">Lable</string>
    <string name="config_nav_imageview">ImageView</string>
    <string name="config_nav_progressbar">ProgressBar</string>
    <string name="config_nav_feature">Feature</string>
    <string name="config_nav_notification">Notification</string>
    <string name="config_nav_frequence">Frequence</string>
    <string name="config_nav_adapter">Adapter</string>
    <string name="config_nav_file">File</string>
    <string name="config_nav_save">Save</string>
    <string name="config_nav_upload">Upload</string>
    <!--Config Activity -->
    <string name="config_save_success">Success save file</string>
    <string name="config_save_fail">Some errors happened</string>

    <string name="config_adapter_dialog_title">Adapter seting</string>

    <string name="accept_buttun">Accept</string>
    <string name="canel_buttun">Cancel</string>
    <string name="creat_buttun">Creat</string>
    <string name="paramset_save">Save</string>



</resources>
