<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pipe_bluetooth"
        android:title="@string/pre_pipe_bluetooth_title"
        android:summary="@string/pre_pipe_bluetooth_summary"/>

    <ListPreference
        android:defaultValue="9600"
        android:entries="@array/pre_pipe_bluetooth_baudrate_values_titles"
        android:entryValues="@array/pre_pipe_bluetooth_baudrate_values_titles"
        android:key="pipe_bluetooth_baudrate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:dependency="pipe_bluetooth"
        android:title="@string/pre_pipe_bluetooth_baudrate_title" />
    
    <SwitchPreference
        android:defaultValue="false"
        android:key="pipe_otg"
        android:title="@string/pre_pipe_otg_title"
        android:summary="@string/pre_pipe_otg_summary"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="pipe_wifi"
        android:title="@string/pre_pipe_wifi_title"
        android:summary="@string/pre_pipe_wifi_summary"/>
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pre_pipe_wifi_select_values_titles"
        android:entryValues="@array/pre_pipe_wifi_select_values"
        android:key="pipe_wifi_protocol"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pre_pipe_wifi_select_title" />>
    <EditTextPreference
        android:title="@string/pre_pipe_wifi_address_title"
        android:key="pipe_wifi_address"
        android:summary="@string/pre_pipe_wifi_address_summary"
        android:dependency="pipe_wifi"/>
    <EditTextPreference
        android:title="@string/pre_pipe_wifi_port_title"
        android:key="pipe_wifi_port"
        android:summary="@string/pre_pipe_wifi_port_summary"
        android:dependency="pipe_wifi"/>
</PreferenceScreen>