<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_enable"
        android:title="@string/pre_notification_enable_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_ring_enable"
        android:dependency="notifications_enable"
        android:title="@string/pre_notification_ring_enable_title"
        android:summary="@string/pre_notification_ring_enable_summary"/>

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_ring_enable"
        android:key="notifications_ring"
        android:ringtoneType="notification"
        android:title="@string/pre_notification_ring_choose_title"/>

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_enable"
        android:key="notifications_vibrate_enable"
        android:title="@string/pre_notification_vibrate_enable_title"
        android:summary="@string/pre_notification_vibrate_enable_summary"/>

</PreferenceScreen>
