<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_general"
        android:title="@string/pre_general_title" />

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/pre_notification_title" />

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pre_data_sync_title" />

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$pathPreferceFragment"
        android:icon="@drawable/ic_folder"
        android:title="@string/pre_path_title"/>

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$pipePreferenceFragment"
        android:icon="@drawable/ic_pipe"
        android:title="@string/pre_pipe_title"/>

    <header
        android:fragment="com.phase.czq.signalpanel.SettingsActivity$featurePreferceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pre_feature_title"/>

</preference-headers>
