<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_panel_panelname" />

        <EditText
            android:id="@+id/input_panel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_panel_panelname_kit"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_panel_author" />

        <EditText
            android:id="@+id/input_panel_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_panel_author_kit"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/new_panel_description"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <MultiAutoCompleteTextView
        android:id="@+id/input_panel_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_panel_description_kit"
        android:typeface="serif"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>
